PPv09d-b20140522-r1 -Gestión de Abonos completa -Revisión de ventanas de pagos.

--- a/WebContent/listaactivos.xhtml
+++ b/WebContent/listaactivos.xhtml
@@ -142,7 +142,7 @@
 															selection="#{GestorListaActivos.activoseleccionado}" selectionMode="single"
 																paginator="true" paginatorPosition="bottom" rows="10" 
 																paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
-																rowsPerPageTemplate="5,10,15">  
+																rowsPerPageTemplate="5,10,15" lazy="true" emptyMessage="Sin registros">  
 														<f:facet name="header">  
 															Activos
 														</f:facet>
