--- a/WebContent/listaprovisiones.xhtml
+++ b/WebContent/listaprovisiones.xhtml
@@ -155,6 +155,20 @@
 
 							<p:column>
 								<f:facet name="header">
+									<h:outputText value="Grupo de Gastos" />
+								</f:facet>
+								<h:outputText value="#{provision.DCOGRUG}" />
+							</p:column>
+
+							<p:column>
+								<f:facet name="header">
+									<h:outputText value="Tipo de Gastos" />
+								</f:facet>
+								<h:outputText value="#{provision.DCOTPGA}" />
+							</p:column>
+
+							<p:column>
+								<f:facet name="header">
 									<h:outputText value="Número de Gastos" />
 								</f:facet>
 								<h:outputText value="#{provision.GASTOS}" />
