--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -34,6 +34,8 @@
 								url="pagocomunidad.xhtml" icon="ui-icon-signal-cart" />
 							<p:menuitem value="Pago Provision"
 								url="pagoprovision.xhtml" icon="ui-icon-signal-cart" />
+							<p:menuitem value="Revision de Pagos"
+								url="revisapago.xhtml" icon="ui-icon-signal-cart" />
 						</p:submenu>
 
 						<p:submenu label="Provisiones">
