--- a/WebContent/pagocomunidad.xhtml
+++ b/WebContent/pagocomunidad.xhtml
@@ -33,8 +33,8 @@
 						<p:fieldset legend="Acciones">
 							<h:panelGrid columns="3" cellpadding="5">
 
-								<p:commandButton value="Pagar" update="msgs, popup, panel" action="#{GestorPagosComunidad.registrarPago}" onstart="statusDialog.show()" oncomplete="statusDialog.hide()"/>
-								<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panel" actionListener="#{GestorPagosComunidad.limpiarPlantilla}" />	
+								<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panel, NOTA" actionListener="#{GestorPagosComunidad.limpiarPlantilla}" />
+								<p:commandButton value="Pagar" update="msgs, popup, panel" action="#{GestorPagosComunidad.registrarPago}" onstart="statusDialog.show()" oncomplete="statusDialog.hide()"/>	
 
 							</h:panelGrid>
 						</p:fieldset>
