PPv09d-b20140529-r1 -GestorEjecucionAbonos (implementacion parcial)

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -24,8 +24,6 @@
 						</p:submenu>
 						
 						<p:submenu label="Pagos" async="true">
-							<p:menuitem value="Abono"
-								url="abono.xhtml" icon="ui-icon-signal-cart" />
 							<p:menuitem value="Pago por Conexión"
 								url="pagoconexion.xhtml" icon="ui-icon-signal-diag" />
 							<p:menuitem value="Pago Simple"
@@ -36,6 +34,13 @@
 								url="pagoprovision.xhtml" icon="ui-icon-signal-cart" />
 							<p:menuitem value="Revision de Pagos"
 								url="revisapago.xhtml" icon="ui-icon-signal-cart" />
+						</p:submenu>
+
+						<p:submenu label="Abonos">
+							<p:menuitem value="Abonar Gasto"
+								url="abono.xhtml" icon="ui-icon-signal-cart" />
+							<p:menuitem value="Ejecutar Abono" 
+								url="ejecutaabono.xhtml" icon="ui-icon-check" />
 						</p:submenu>
 
 						<p:submenu label="Provisiones">
