PPv09d-b20140602-r1 -GestorEjecucionAbonos (Implementación completa)

--- a/WebContent/ejecutaabono.xhtml
+++ b/WebContent/ejecutaabono.xhtml
@@ -113,7 +113,7 @@
 									</h:panelGrid>
 								</p:fieldset>
 
-								<p:fieldset legend="Progreso de Ejecuciones en Provisión #{GestorEjecucionAbono.sNUPROF}" id="panelProgresoProvision">
+								<p:fieldset legend="Progreso de Ejecuciones en Provisión #{GestorEjecucionAbono.sNUPROFA}" id="panelProgresoProvision">
 										<h:panelGrid columns="1" cellpadding="3">
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
