PPv09d-b20140603-r1 GestorBloqueosActivo (Implementacion parcial)

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -10,6 +10,9 @@
 								url="listaactivos.xhtml" icon="ui-icon-search" />
 							<p:menuitem value="Cuentas Activo"
 								url="gestioncuentasactivos.xhtml" icon="ui-icon-bookmark" />
+							<p:menuitem value="Bloqueo de Activos"
+								url="bloqueoactivos.xhtml" icon="ui-icon-bookmark" />
+								
 						</p:submenu>
 
 						<p:submenu label="Gastos" async="true">
